--- a/20221003_ss/20221003_ss.vcxproj.filters
+++ b/20221003_ss/20221003_ss.vcxproj.filters
@@ -61,17 +61,29 @@
     <ClCompile Include="..\Library\Debug\imgui\imgui_widgets.cpp">
       <Filter>Debug</Filter>
     </ClCompile>
-    <ClCompile Include="..\Library\GraphicsSystem\DirectX\D3DManager.cpp">
+    <ClCompile Include="..\Library\GraphicsSystem\DirectX\Gfx_D3DManager.cpp">
       <Filter>GraphicsSystem\DirectX</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\Window.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="..\Library\GraphicsSystem\DirectX\Gfx_Shader.cpp">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\GraphicsSystem\DirectX\Gfx_VertexShader.cpp">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\GraphicsSystem\DirectX\Gfx_PixelShader.cpp">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\GraphicsSystem\DirectX\Gfx_ConstantBuffer.cpp">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\GraphicsSystem\DirectX\Gfx_DXBuffer.cpp">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Source\main.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="..\Source\framework.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
@@ -105,16 +117,42 @@
     <ClInclude Include="..\Library\Debug\imgui\imstb_truetype.h">
       <Filter>Debug</Filter>
     </ClInclude>
-    <ClInclude Include="..\Library\GraphicsSystem\DirectX\D3DManager.h">
+    <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_D3DManager.h">
       <Filter>GraphicsSystem\DirectX</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\Window.h">
       <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_Shader.h">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_VertexShader.h">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_PixelShader.h">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\main.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_ConstantBuffer.h">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_DXBuffer.h">
+      <Filter>GraphicsSystem\DirectX</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="memo.txt">
       <Filter>リソース ファイル</Filter>
     </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shader\Pixel2D.hlsl">
+      <Filter>hlsl</Filter>
+    </FxCompile>
+    <FxCompile Include="Shader\Vertex2D.hlsl">
+      <Filter>hlsl</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
