--- a/20221003_ss/20221003_ss.vcxproj.filters
+++ b/20221003_ss/20221003_ss.vcxproj.filters
@@ -5,16 +5,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="ヘッダー ファイル">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="リソース ファイル">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Debug">
-      <UniqueIdentifier>{cfcc7dc9-8a03-414b-b801-032930755f3f}</UniqueIdentifier>
     </Filter>
     <Filter Include="GraphicsSystem">
       <UniqueIdentifier>{cedd977a-64b7-4939-b3cc-34d40f0bad5d}</UniqueIdentifier>
@@ -25,11 +18,15 @@
     <Filter Include="hlsl">
       <UniqueIdentifier>{35a44a2d-7ac7-4cd6-9bbf-bdb033ff2d2a}</UniqueIdentifier>
     </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="20221003_ss.rc">
-      <Filter>リソース ファイル</Filter>
-    </ResourceCompile>
+    <Filter Include="GraphicsSystem\DirectX\geometry">
+      <UniqueIdentifier>{7d2f59eb-ee92-4bcf-84ec-f76b049e4a69}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="CoreSystem">
+      <UniqueIdentifier>{114a617b-a87d-497f-811f-8a7454aab756}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="CoreSystem\Debug">
+      <UniqueIdentifier>{cfcc7dc9-8a03-414b-b801-032930755f3f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Image Include="small.ico">
@@ -40,31 +37,13 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Source\main.cpp">
+    <ClCompile Include="..\Source\Win_Main.cpp">
       <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Library\Debug\imgui\imgui.cpp">
-      <Filter>Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Library\Debug\imgui\imgui_draw.cpp">
-      <Filter>Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Library\Debug\imgui\imgui_impl_dx11.cpp">
-      <Filter>Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Library\Debug\imgui\imgui_impl_win32.cpp">
-      <Filter>Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Library\Debug\imgui\imgui_tables.cpp">
-      <Filter>Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Library\Debug\imgui\imgui_widgets.cpp">
-      <Filter>Debug</Filter>
     </ClCompile>
     <ClCompile Include="..\Library\GraphicsSystem\DirectX\Gfx_D3DManager.cpp">
       <Filter>GraphicsSystem\DirectX</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\Window.cpp">
+    <ClCompile Include="..\Source\Win_Window.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="..\Library\GraphicsSystem\DirectX\Gfx_Shader.cpp">
@@ -82,45 +61,39 @@
     <ClCompile Include="..\Library\GraphicsSystem\DirectX\Gfx_DXBuffer.cpp">
       <Filter>GraphicsSystem\DirectX</Filter>
     </ClCompile>
+    <ClCompile Include="..\Library\GraphicsSystem\DirectX\Gfx_Texture.cpp">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\GraphicsSystem\DirectX\Geometry\Gfx_Geometry.cpp">
+      <Filter>GraphicsSystem\DirectX\geometry</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\CoreSystem\Input.cpp">
+      <Filter>CoreSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui.cpp">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui_draw.cpp">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui_impl_dx11.cpp">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui_impl_win32.cpp">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui_tables.cpp">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui_widgets.cpp">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Source\framework.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\Resource.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\targetver.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Library\Debug\imgui\imconfig.h">
-      <Filter>Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Library\Debug\imgui\imgui.h">
-      <Filter>Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Library\Debug\imgui\imgui_impl_dx11.h">
-      <Filter>Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Library\Debug\imgui\imgui_impl_win32.h">
-      <Filter>Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Library\Debug\imgui\imgui_internal.h">
-      <Filter>Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Library\Debug\imgui\imstb_rectpack.h">
-      <Filter>Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Library\Debug\imgui\imstb_textedit.h">
-      <Filter>Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Library\Debug\imgui\imstb_truetype.h">
-      <Filter>Debug</Filter>
-    </ClInclude>
     <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_D3DManager.h">
       <Filter>GraphicsSystem\DirectX</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Window.h">
+    <ClInclude Include="..\Source\Win_Window.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_Shader.h">
@@ -132,7 +105,7 @@
     <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_PixelShader.h">
       <Filter>GraphicsSystem\DirectX</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\main.h">
+    <ClInclude Include="..\Source\Win_Main.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_ConstantBuffer.h">
@@ -141,6 +114,39 @@
     <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_DXBuffer.h">
       <Filter>GraphicsSystem\DirectX</Filter>
     </ClInclude>
+    <ClInclude Include="..\Library\GraphicsSystem\DirectX\Gfx_Texture.h">
+      <Filter>GraphicsSystem\DirectX</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\GraphicsSystem\DirectX\Geometry\Gfx_Geometry.h">
+      <Filter>GraphicsSystem\DirectX\geometry</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\CoreSystem\Input.h">
+      <Filter>CoreSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imconfig.h">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imgui.h">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imgui_impl_dx11.h">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imgui_impl_win32.h">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imgui_internal.h">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imstb_rectpack.h">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imstb_textedit.h">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imstb_truetype.h">
+      <Filter>CoreSystem\Debug</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="memo.txt">
@@ -148,10 +154,16 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Shader\Pixel2D.hlsl">
+    <FxCompile Include="Shader\PS_2D.hlsl">
       <Filter>hlsl</Filter>
     </FxCompile>
-    <FxCompile Include="Shader\Vertex2D.hlsl">
+    <FxCompile Include="Shader\VS_2D.hlsl">
+      <Filter>hlsl</Filter>
+    </FxCompile>
+    <FxCompile Include="Shader\PS_Lambert.hlsl">
+      <Filter>hlsl</Filter>
+    </FxCompile>
+    <FxCompile Include="Shader\VS_3D.hlsl">
       <Filter>hlsl</Filter>
     </FxCompile>
   </ItemGroup>
