--- a/20221003_ss/20221003_ss.vcxproj
+++ b/20221003_ss/20221003_ss.vcxproj
@@ -151,60 +151,91 @@
     <Image Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui.cpp" />
-    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui_draw.cpp" />
-    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui_impl_dx11.cpp" />
-    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui_impl_win32.cpp" />
-    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui_tables.cpp" />
-    <ClCompile Include="..\Library\CoreSystem\Debug\imgui\imgui_widgets.cpp" />
     <ClCompile Include="..\Library\CoreSystem\Input.cpp" />
+    <ClCompile Include="..\Library\GameSystem\Scene\Scene_TestScene.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11ConstantBuffer.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11DepthStencilView_Impl.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11Device_Impl.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11GraphiccsBinder.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11MeshBuffer.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11PixelShader.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11RenderCommand_Impl.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11RenderTarget_Impl.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11ScissorRect_Impl.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11SwapChain_Impl.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11Texture.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11VertexShader.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11ViewPort_Impl.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12ConstantBuffer.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12DepthStencilView_Impl.cpp" />
-    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12Device_Impl.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12DescriptorHeap.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12GraphiccsBinder.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12MeshBuffer.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12PipelineState.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12PixelShader.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12RenderCommand_Impl.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12RenderTarget_Impl.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12RootSignature.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12ScissorRect_Impl.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12SwapChain_Impl.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12Texture.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12VertexShader.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12ViewPort_Impl.cpp" />
-    <ClCompile Include="..\Library\GraphicsSystem\D3D12\Gfx_D3DManager.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\Interface\Gfx_ConstantBuffer.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\Interface\Gfx_DeviceFactory.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\Interface\Gfx_GraphiccsBinder.cpp" />
     <ClCompile Include="..\Library\GraphicsSystem\Interface\Gfx_GraphicsManager.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\Interface\Gfx_GraphicsResource.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\Interface\Gfx_GraphicsResourceDefault.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\Interface\Gfx_MeshBuffer.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\Interface\Gfx_Shader.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\Interface\Gfx_Tag.cpp" />
+    <ClCompile Include="..\Library\GraphicsSystem\Interface\Gfx_Texture.cpp" />
     <ClCompile Include="..\Source\Win_Main.cpp" />
     <ClCompile Include="..\Source\Win_Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imconfig.h" />
-    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imgui.h" />
-    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imgui_impl_dx11.h" />
-    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imgui_impl_win32.h" />
-    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imgui_internal.h" />
-    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imstb_rectpack.h" />
-    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imstb_textedit.h" />
-    <ClInclude Include="..\Library\CoreSystem\Debug\imgui\imstb_truetype.h" />
     <ClInclude Include="..\Library\CoreSystem\Input.h" />
+    <ClInclude Include="..\Library\GameSystem\Scene\Scene_TestScene.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11ConstantBuffer.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11DepthStencilView_Impl.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11Device_Impl.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11GraphiccsBinder.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11MeshBuffer.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11PixelShader.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11RenderCommand_Impl.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11RenderTarget_Impl.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11ScissorRect_Impl.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11SwapChain_Impl.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11Texture.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11VertexShader.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D11\Gfx_D3D11ViewPort_Impl.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12ConstantBuffer.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12DepthStencilView_Impl.h" />
-    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12Device_Impl.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12DescriptorHeap.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12GraphiccsBinder.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12MeshBuffer.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12PipelineState.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12PixelShader.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12RenderCommand_Impl.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12RenderTarget_Impl.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12RootSignature.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12ScissorRect_Impl.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12SwapChain_Impl.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12Texture.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12VertexShader.h" />
     <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3D12ViewPort_Impl.h" />
-    <ClInclude Include="..\Library\GraphicsSystem\D3D12\Gfx_D3DManager.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_ConstantBuffer.h" />
     <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_DeviceFactory.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_GraphiccsBinder.h" />
     <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_GraphicsManager.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_GraphicsResource.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_GraphicsResourceDefault.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_GrapicsObjectBase.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_MeshBuffer.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_Shader.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_Tag.h" />
+    <ClInclude Include="..\Library\GraphicsSystem\Interface\Gfx_Texture.h" />
     <ClInclude Include="..\Library\GraphicsSystem\Interface\IGfx_DepthStencilView.h" />
     <ClInclude Include="..\Library\GraphicsSystem\Interface\IGfx_Device.h" />
     <ClInclude Include="..\Library\GraphicsSystem\Interface\IGfx_RenderCommand.h" />
@@ -222,20 +253,30 @@
     <FxCompile Include="Shader\PS_2D.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
-      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
-      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
-      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
       <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">BasicPS</EntryPointName>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">BasicPS</EntryPointName>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">BasicPS</EntryPointName>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">BasicPS</EntryPointName>
+    </FxCompile>
+    <FxCompile Include="Shader\PS_Color.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
     </FxCompile>
     <FxCompile Include="Shader\PS_Lambert.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
@@ -254,20 +295,16 @@
     <FxCompile Include="Shader\VS_2D.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
-      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
-      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
-      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
       <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)data\%(Filename).cso</ObjectFileOutput>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">BasicVS</EntryPointName>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">BasicVS</EntryPointName>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">BasicVS</EntryPointName>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">BasicVS</EntryPointName>
     </FxCompile>
     <FxCompile Include="Shader\VS_3D.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
